ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/TimetoFilePickUp__c.field-meta.xml
<CustomField>
    <fullName>TimetoFilePickUp__c</fullName>
    <formula>Lender__r.TimetoFilePickUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to File Pick Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>