ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/TotalUpfrontFee__c.field-meta.xml
<CustomField>
    <fullName>TotalUpfrontFee__c</fullName>
    <formula>AdditionalValuationFee__c +  applicationfees__c  +  lenderslegalfees__c +  lenderssettlementfees__c +  RateLockFee__c +  valuationfees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Upfront Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>