ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/transactionaccountavailable__c.field-meta.xml
<CustomField>
    <fullName>transactionaccountavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction Account Available</label>
    <type>Checkbox</type>
</CustomField>