ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/umi__c.field-meta.xml
<CustomField>
    <fullName>umi__c</fullName>
    <description>Net Monthly Surplus or Uncommitted Monthly Income (UMI) is the income available each month, after all expenses and commitments and any required buffer amount have been factored in (including the proposed home loan repayments) - based on assessment rules</description>
    <inlineHelpText>Net Monthly Surplus or Uncommitted Monthly Income (UMI) is the income available each month, after all expenses and commitments and any required buffer amount have been factored in (including the proposed home loan repayments) - based on assessment rules</inlineHelpText>
    <label>Uncommitted Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>