ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/umibuffer__c.field-meta.xml
<CustomField>
    <fullName>umibuffer__c</fullName>
    <description>Monthly Surplus or Uncommitted Monthly Income (UMI) Buffer amount required by lenders to have available each month</description>
    <inlineHelpText>Monthly Surplus or Uncommitted Monthly Income (UMI) Buffer amount required by lenders to have available each month</inlineHelpText>
    <label>UMI Buffer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>