ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/UMILivingExpenses__c.field-meta.xml
<CustomField>
    <fullName>UMILivingExpenses__c</fullName>
    <label>UMI Living Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>