ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/UMIRuleActive__c.field-meta.xml
<CustomField>
    <fullName>UMIRuleActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UMI Rule Active</label>
    <type>Checkbox</type>
</CustomField>