ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/UMIThreshold__c.field-meta.xml
<CustomField>
    <fullName>UMIThreshold__c</fullName>
    <label>UMI Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>