ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/UpfrontCommission__c.field-meta.xml
<CustomField>
    <fullName>UpfrontCommission__c</fullName>
    <formula>Lender__r.UpfrontCommissionRate__c *  LoanAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upfront Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>