ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/UpfrontCommissionRate__c.field-meta.xml
<CustomField>
    <fullName>UpfrontCommissionRate__c</fullName>
    <formula>Lender__r.UpfrontCommissionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upfront Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>