ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/usedrate__c.field-meta.xml
<CustomField>
    <fullName>usedrate__c</fullName>
    <label>Used Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>