ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/valuationfees__c.field-meta.xml
<CustomField>
    <fullName>valuationfees__c</fullName>
    <label>Valuation Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>