ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/variablerate__c.field-meta.xml
<CustomField>
    <fullName>variablerate__c</fullName>
    <label>Variable Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>