ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/vic__c.field-meta.xml
<CustomField>
    <fullName>vic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIC</label>
    <type>Checkbox</type>
</CustomField>