ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/WA__c.field-meta.xml
<CustomField>
    <fullName>WA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WA</label>
    <type>Checkbox</type>
</CustomField>