ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/Year1TrailCommission__c.field-meta.xml
<CustomField>
    <fullName>Year1TrailCommission__c</fullName>
    <formula>Lender__r.Year1TrailCommissionRate__c *  LoanAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 1 Trail Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>