ctm-sf-homeloan-app/main/default/objects/LoanApplicationProduct__c/fields/Year1TrailCommissionRate__c.field-meta.xml
<CustomField>
    <fullName>Year1TrailCommissionRate__c</fullName>
    <formula>Lender__r.Year1TrailCommissionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 1 Trail Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>